// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShadowPanel /> with custom props matches with snapshot 1`] = `
.c0 {
  display: inline-block;
  background: #fff;
  border: 2px solid #eee;
  border-radius: 0.25rem;
  padding: 1.88rem;
  box-shadow: 0 0.63rem 1.25rem 0 rgba(0,0,0,0.2);
  position: relative;
}

.c0::before,
.c0::after {
  content: '';
  position: absolute;
  right: -0.63rem;
  top: 50rem;
  border-bottom: 0.56rem solid transparent;
  border-top: 0.56rem solid transparent;
  border-left: 0.5rem solid #eee;
}

.c0::after {
  right: -0.5rem;
  border-left-color: #fff;
}

<div
  aria-label="ARIA label"
  className="c0"
>
  Foobar
</div>
`;

exports[`<ShadowPanel /> with default props matches with snapshot 1`] = `
.c0 {
  display: inline-block;
  background: #fff;
  border: 2px solid #eee;
  border-radius: 0.25rem;
  padding: 1.88rem;
  box-shadow: 0 0.63rem 1.25rem 0 rgba(0,0,0,0.2);
  position: relative;
}

.c0::before,
.c0::after {
  content: '';
  position: absolute;
  top: -0.63rem;
  left: 1.88rem;
  border-left: 0.56rem solid transparent;
  border-right: 0.56rem solid transparent;
  border-bottom: 0.5rem solid #eee;
}

.c0::after {
  top: -0.5rem;
  border-bottom-color: #fff;
}

<div
  className="c0"
>
  Foobar
</div>
`;
